--- a/HTML-CSS/PROJE-1/anasayfa.html
+++ b/HTML-CSS/PROJE-1/anasayfa.html
@@ -31,7 +31,7 @@
                             <h2>deneme</h2>
                         </p>
                         <p>
-                            <p>asdasdas</p>
+                            <p>asdsadasasasdas</p>
                             <p>adsadasdas</p>
                         </p>
                         <p>
