--- a/HTML-CSS/PROJE-1/anasayfa.html
+++ b/HTML-CSS/PROJE-1/anasayfa.html
@@ -32,7 +32,7 @@
                         </p>
                         <p>
                             <p>asdsadasasasdas</p>
-                            <p>adsadasdas</p>
+                            <p>adsadasdsadasdasas</p>
                         </p>
                         <p>
                             <h2>deneme</h2>
