--- a/HTML-CSS/PROJE-1/anasayfa.html
+++ b/HTML-CSS/PROJE-1/anasayfa.html
@@ -17,7 +17,7 @@
             <div class="icerikAna">
             
                     <div class="icerikMenu">
-                        <div class="menu1">MENU 1</div>
+                        <div class="menu1">ana sayfa</div>
                         <div class="menu2">MENU 2</div>
                         <div class="menu3"> MENU 3</div>
                         <div class="menu4"> MENU4 </div>
