--- a/HTML-CSS/PROJE-1/anasayfa.html
+++ b/HTML-CSS/PROJE-1/anasayfa.html
@@ -15,90 +15,178 @@
         <div class="icerik">
             <div class="icerikSabitSol"></div>
             <div class="icerikAna">
-            
-                    <div class="icerikMenu">
-                        <div class="menu1">ana sayfa</div>
-                        <div class="menu2">MENU 2</div>
-                        <div class="menu3"> MENU 3</div>
-                        <div class="menu4"> MENU4 </div>
-                    </div>
-                    <div class="icerikResim">
-                            <img src="image/image.jpg" alt="doga">
-                    </div>
+
+                <div class="icerikMenu">
+                    <div class="menu1">ANA SAYFA</div>
+                    <div class="menu2">BLOG</div>
+                    <div class="menu3"> HABERLER</div>
+                    <div class="menu4"> İLETİŞİM </div>
+                </div>
+                <div class="icerikResim">
+                    <img src="https://picsum.photos/400/200" alt="doga">
+                </div>
                 <div class="icerikHaber">
                     <div class="icerikSolMenu">
-                        <p>
-                            <h2>deneme</h2>
+                        <h2>
+                            Praesent ut blandit lorem.</h2>
+
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus elit sem, consectetur et
+                            eros at, porta molestie nibh. Etiam et venenatis ex. Cras magna purus, ullamcorper in turpis
+                            in, tristique commodo erat. Vivamus aliquam, metus id consectetur facilisis, justo erat.</p>
                         </p>
-                        <p>
-                            <p>asdsadasasasdas</p>
-                            <p>adsadasdsadasdasas</p>
+                        <h2>
+                            Praesent ut blandit lorem.</h2>
+
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus elit sem, consectetur et
+                            eros at, porta molestie nibh. Etiam et venenatis ex. Cras magna purus, ullamcorper in turpis
+                            in, tristique commodo erat. Vivamus aliquam, metus id consectetur facilisis, justo erat.</p>
                         </p>
-                        <p>
-                            <h2>deneme</h2>
+                        <h2>
+                            Praesent ut blandit lorem.</h2>
+
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus elit sem, consectetur et
+                            eros at, porta molestie nibh. Etiam et venenatis ex. Cras magna purus, ullamcorper in turpis
+                            in, tristique commodo erat. Vivamus aliquam, metus id consectetur facilisis, justo erat.</p>
                         </p>
-                        <p>
-                            <p>asdasdas</p>
-                            <p>adsadasdas</p>
+                        <h2>
+                            Praesent ut blandit lorem.</h2>
+
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus elit sem, consectetur et
+                            eros at, porta molestie nibh. Etiam et venenatis ex. Cras magna purus, ullamcorper in turpis
+                            in, tristique commodo erat. Vivamus aliquam, metus id consectetur facilisis, justo erat.</p>
                         </p>
-                        <p>
-                            <h2>deneme</h2>
+                        <h2>
+                            Praesent ut blandit lorem.</h2>
+
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus elit sem, consectetur et
+                            eros at, porta molestie nibh. Etiam et venenatis ex. Cras magna purus, ullamcorper in turpis
+                            in, tristique commodo erat. Vivamus aliquam, metus id consectetur facilisis, justo erat.</p>
                         </p>
-                        <p>
-                            <p>asdasdas</p>
-                            <p>adsadasdas</p>
+                        <h2>
+                            Praesent ut blandit lorem.</h2>
+
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus elit sem, consectetur et
+                            eros at, porta molestie nibh. Etiam et venenatis ex. Cras magna purus, ullamcorper in turpis
+                            in, tristique commodo erat. Vivamus aliquam, metus id consectetur facilisis, justo erat.</p>
                         </p>
-                        <p>
-                            <h2>deneme</h2>
+                        <h2>
+                            Praesent ut blandit lorem.</h2>
+
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus elit sem, consectetur et
+                            eros at, porta molestie nibh. Etiam et venenatis ex. Cras magna purus, ullamcorper in turpis
+                            in, tristique commodo erat. Vivamus aliquam, metus id consectetur facilisis, justo erat.</p>
                         </p>
-                        <p>
-                            <p>asdasdas</p>
-                            <p>adsadasdas</p>
-                        </p>
-                        <p>
-                            <h2>deneme</h2>
-                        </p>
-                        <p>
-                            <p>asdasdas</p>
-                            <p>adsadasdas</p>
-                        </p>
-                        
+
+
+
                     </div>
                     <div class="icerikOrtaMenu">
                         <div class="icerikYazı">
-                            <h2>deneme baslik</h2>
-                            <p>deneme aciklama</p> <p>deneme aciklama</p><p>deneme aciklama</p>
-                            <p>deneme detaylandırma deneme detaylandırma deneme detaylandırma
-                                deneme detaylandırma deneme detaylandırma deneme detaylandırma 
-                               deneme detaylandırma deneme detaylandırma deneme detaylandırma</p>
+                            <h2>Praesent ut blandit lorem.</h2>
+
+                            <p>
+                                Curabitur interdum nulla et libero aliquam, ut cursus mi accumsan. Donec vitae justo
+                                iaculis, porttitor orci vitae, auctor leo. Integer quam purus, lobortis quis felis sed,
+                                feugiat tincidunt neque. Nulla rutrum eleifend sodales. Suspendisse ut eros in libero
+                                iaculis ultricies. Suspendisse vitae facilisis nibh. Aliquam eu feugiat tellus, vitae
+                                commodo ex. Vivamus tristique, turpis id tincidunt hendrerit, ipsum diam interdum lorem,
+                                vitae convallis velit odio vitae sem. Ut malesuada iaculis erat nec dapibus.In dolor
+                                erat, dignissim ac consequat ac, mollis vitae metus. Aliquam dictum elementum tincidunt.
+                                Sed luctus dignissim interdum. In maximus nisi non libero tristique consectetur. Lorem
+                                ipsum dolor sit amet, consectetur adipiscing elit. Phasellus et sollicitudin est. Donec
+                                ut justo tincidunt, dictum nunc id, tempus urna. Aliquam eget eros in libero porttitor
+                                venenatis vel id sapien. Cras sed tincidunt nibh, in auctor augue.
+                                Curabitur dictum, turpis faucibus euismod iaculis, urna risus lacinia nibh, vitae
+                                fermentum libero mi eu lacus. Phasellus sed sodales nulla, vitae ultricies velit. In
+                                vitae nunc tellus. Cras sit amet metus ac arcu tristique consequat. Phasellus tristique
+                                suscipit diam et ultrices. Aenean non pulvinar risus. Aenean porttitor tincidunt erat.
+                                Nullam et ligula ligula. Quisque interdum porttitor orci. Sed ornare congue urna, sed
+                                pulvinar ante interdum vel. Etiam et neque eros.</p>
                         </div>
                         <div class="icerikYazı">
-                            <h2>deneme baslik</h2>
-                            <p>deneme aciklama</p><p>deneme aciklama</p><p>deneme aciklama</p>
-                            <p>deneme detaylandırma deneme detaylandırma deneme detaylandırma
-                                 deneme detaylandırma deneme detaylandırma deneme detaylandırma 
-                                deneme detaylandırma deneme detaylandırma deneme detaylandırma</p>
+                            <h2>Praesent ut blandit lorem.</h2>
+                            <p>
+                                Curabitur interdum nulla et libero aliquam, ut cursus mi accumsan. Donec vitae justo
+                                iaculis, porttitor orci vitae, auctor leo. Integer quam purus, lobortis quis felis sed,
+                                feugiat tincidunt neque. Nulla rutrum eleifend sodales. Suspendisse ut eros in libero
+                                iaculis ultricies. Suspendisse vitae facilisis nibh. Aliquam eu feugiat tellus, vitae
+                                commodo ex. Vivamus tristique, turpis id tincidunt hendrerit, ipsum diam interdum lorem,
+                                vitae convallis velit odio vitae sem. Ut malesuada iaculis erat nec dapibus.In dolor
+                                erat, dignissim ac consequat ac, mollis vitae metus. Aliquam dictum elementum tincidunt.
+                                Sed luctus dignissim interdum. In maximus nisi non libero tristique consectetur. Lorem
+                                ipsum dolor sit amet, consectetur adipiscing elit. Phasellus et sollicitudin est. Donec
+                                ut justo tincidunt, dictum nunc id, tempus urna. Aliquam eget eros in libero porttitor
+                                venenatis vel id sapien. Cras sed tincidunt nibh, in auctor augue.
+                                Curabitur dictum, turpis faucibus euismod iaculis, urna risus lacinia nibh, vitae
+                                fermentum libero mi eu lacus. Phasellus sed sodales nulla, vitae ultricies velit. In
+                                vitae nunc tellus. Cras sit amet metus ac arcu tristique consequat. Phasellus tristique
+                                suscipit diam et ultrices. Aenean non pulvinar risus. Aenean porttitor tincidunt erat.
+                                Nullam et ligula ligula. Quisque interdum porttitor orci. Sed ornare congue urna, sed
+                                pulvinar ante interdum vel. Etiam et neque eros.</p>
                         </div>
                         <div class="icerikYazı">
-                            <h2>deneme baslik</h2>
-                            <p>deneme aciklama</p><p>deneme aciklama</p><p>deneme aciklama</p>
-                            <p>deneme detaylandırma deneme detaylandırma deneme detaylandırma
-                                deneme detaylandırma deneme detaylandırma deneme detaylandırma 
-                               deneme detaylandırma deneme detaylandırma deneme detaylandırma</p>
+                            <h2>Praesent ut blandit lorem.</h2>
+
+                            <p>
+                                Curabitur interdum nulla et libero aliquam, ut cursus mi accumsan. Donec vitae justo
+                                iaculis, porttitor orci vitae, auctor leo. Integer quam purus, lobortis quis felis sed,
+                                feugiat tincidunt neque. Nulla rutrum eleifend sodales. Suspendisse ut eros in libero
+                                iaculis ultricies. Suspendisse vitae facilisis nibh. Aliquam eu feugiat tellus, vitae
+                                commodo ex. Vivamus tristique, turpis id tincidunt hendrerit, ipsum diam interdum lorem,
+                                vitae convallis velit odio vitae sem. Ut malesuada iaculis erat nec dapibus.In dolor
+                                erat, dignissim ac consequat ac, mollis vitae metus. Aliquam dictum elementum tincidunt.
+                                Sed luctus dignissim interdum. In maximus nisi non libero tristique consectetur. Lorem
+                                ipsum dolor sit amet, consectetur adipiscing elit. Phasellus et sollicitudin est. Donec
+                                ut justo tincidunt, dictum nunc id, tempus urna. Aliquam eget eros in libero porttitor
+                                venenatis vel id sapien. Cras sed tincidunt nibh, in auctor augue.
+                                Curabitur dictum, turpis faucibus euismod iaculis, urna risus lacinia nibh, vitae
+                                fermentum libero mi eu lacus. Phasellus sed sodales nulla, vitae ultricies velit. In
+                                vitae nunc tellus. Cras sit amet metus ac arcu tristique consequat. Phasellus tristique
+                                suscipit diam et ultrices. Aenean non pulvinar risus. Aenean porttitor tincidunt erat.
+                                Nullam et ligula ligula. Quisque interdum porttitor orci. Sed ornare congue urna, sed
+                                pulvinar ante interdum vel. Etiam et neque eros.</p>
                         </div>
                         <div class="icerikYazı">
-                            <h2>deneme baslik</h2>
-                            <p>deneme aciklama</p><p>deneme aciklama</p><p>deneme aciklama</p>
-                            <p>deneme detaylandırma deneme detaylandırma deneme detaylandırma
-                                deneme detaylandırma deneme detaylandırma deneme detaylandırma 
-                               deneme detaylandırma deneme detaylandırma deneme detaylandırma</p>
+                            <h2>Praesent ut blandit lorem.</h2>
+                            <p>
+                                Curabitur interdum nulla et libero aliquam, ut cursus mi accumsan. Donec vitae justo
+                                iaculis, porttitor orci vitae, auctor leo. Integer quam purus, lobortis quis felis sed,
+                                feugiat tincidunt neque. Nulla rutrum eleifend sodales. Suspendisse ut eros in libero
+                                iaculis ultricies. Suspendisse vitae facilisis nibh. Aliquam eu feugiat tellus, vitae
+                                commodo ex. Vivamus tristique, turpis id tincidunt hendrerit, ipsum diam interdum lorem,
+                                vitae convallis velit odio vitae sem. Ut malesuada iaculis erat nec dapibus.In dolor
+                                erat, dignissim ac consequat ac, mollis vitae metus. Aliquam dictum elementum tincidunt.
+                                Sed luctus dignissim interdum. In maximus nisi non libero tristique consectetur. Lorem
+                                ipsum dolor sit amet, consectetur adipiscing elit. Phasellus et sollicitudin est. Donec
+                                ut justo tincidunt, dictum nunc id, tempus urna. Aliquam eget eros in libero porttitor
+                                venenatis vel id sapien. Cras sed tincidunt nibh, in auctor augue.
+                                Curabitur dictum, turpis faucibus euismod iaculis, urna risus lacinia nibh, vitae
+                                fermentum libero mi eu lacus. Phasellus sed sodales nulla, vitae ultricies velit. In
+                                vitae nunc tellus. Cras sit amet metus ac arcu tristique consequat. Phasellus tristique
+                                suscipit diam et ultrices. Aenean non pulvinar risus. Aenean porttitor tincidunt erat.
+                                Nullam et ligula ligula. Quisque interdum porttitor orci. Sed ornare congue urna, sed
+                                pulvinar ante interdum vel. Etiam et neque eros.</p>
                         </div>
                         <div class="icerikYazı">
-                            <h2>deneme baslik</h2>
-                            <p>deneme aciklama</p><p>deneme aciklama</p><p>deneme aciklama</p>
-                            <p>deneme detaylandırma deneme detaylandırma deneme detaylandırma
-                                deneme detaylandırma deneme detaylandırma deneme detaylandırma 
-                               deneme detaylandırma deneme detaylandırma deneme detaylandırma</p>
+                            <h2>Praesent ut blandit lorem.</h2>
+                            <p>
+                                Curabitur interdum nulla et libero aliquam, ut cursus mi accumsan. Donec vitae justo
+                                iaculis, porttitor orci vitae, auctor leo. Integer quam purus, lobortis quis felis sed,
+                                feugiat tincidunt neque. Nulla rutrum eleifend sodales. Suspendisse ut eros in libero
+                                iaculis ultricies. Suspendisse vitae facilisis nibh. Aliquam eu feugiat tellus, vitae
+                                commodo ex. Vivamus tristique, turpis id tincidunt hendrerit, ipsum diam interdum lorem,
+                                vitae convallis velit odio vitae sem. Ut malesuada iaculis erat nec dapibus.In dolor
+                                erat, dignissim ac consequat ac, mollis vitae metus. Aliquam dictum elementum tincidunt.
+                                Sed luctus dignissim interdum. In maximus nisi non libero tristique consectetur. Lorem
+                                ipsum dolor sit amet, consectetur adipiscing elit. Phasellus et sollicitudin est. Donec
+                                ut justo tincidunt, dictum nunc id, tempus urna. Aliquam eget eros in libero porttitor
+                                venenatis vel id sapien. Cras sed tincidunt nibh, in auctor augue.
+                                Curabitur dictum, turpis faucibus euismod iaculis, urna risus lacinia nibh, vitae
+                                fermentum libero mi eu lacus. Phasellus sed sodales nulla, vitae ultricies velit. In
+                                vitae nunc tellus. Cras sit amet metus ac arcu tristique consequat. Phasellus tristique
+                                suscipit diam et ultrices. Aenean non pulvinar risus. Aenean porttitor tincidunt erat.
+                                Nullam et ligula ligula. Quisque interdum porttitor orci. Sed ornare congue urna, sed
+                                pulvinar ante interdum vel. Etiam et neque eros.</p>
                         </div>
 
                     </div>
