--- a/MOVİE-APP-UDEMY/index.html
+++ b/MOVİE-APP-UDEMY/index.html
@@ -13,11 +13,11 @@
 
     <header class="main-header">
         <div class="container">
-            <a href="#" class="main-header__logo">MovieApp</a>
+            <a href="#" class="main-header__logo">Movie App</a>
             <nav class="main-nav">
                 <ul class="main-nav__items">
                     <li class="main-nav__item">
-                        <a href="#">Filmler</a>
+                        <a href="#">Movies</a>
                     </li>
                     <li class="main-nav__item">
                         <a href="#">Diziler</a>
