--- a/MY_SITE/public/contact.html
+++ b/MY_SITE/public/contact.html
@@ -39,7 +39,7 @@
             <div class="border-bottom"></div>
             <p class="lead">Lorem ipsum dolor sit amet.</p>
 
-            <form>
+            <form   action="https://formspree.io/f/xdobvkog" method="POST">
                 <div class="form-fields">
                     <input type="text" class="input name" name="fullname" id="fullname" placeholder="Adınız">
                     <input type="text" class="input subject" name="subject" id="subject" placeholder="Konu">
